themes/hugo-creative-theme/static/css/creative.css
/*!
 * Start Bootstrap - Creative Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

html,
body {
    width: 100%;
}

html {
  position: relative;
  min-height: 100%;
}

body {
    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
    height: 100%;
    margin-bottom: 196px;
}

hr {
    max-width: 70px;
    border-color: #e84661;
    border-width: 3px;
}

hr.light {
    border-color: #fff;
}

a {
    color: #e84661;
    -webkit-transition: all .35s;
    transition: all .35s;
}

a:hover,
a:focus {
    color: #3579DC;
}

#about a {
    color: rgba(52, 52, 52, .7);
}

#about a:hover,
#about a:focus {
    color: rgb(52, 52, 52);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
}

p {
    margin-bottom: 20px;
    font-size: 16px;
    line-height: 1.5;
}

.bg-primary {
    background-color: #e84661;
}

.bg-dark {
    color: #fff;
    background-color: #36bfbe;
}

.text-faded {
    color: rgba(255,255,255,.7);
}

section {
    padding: 100px 0;
}

aside, #credits {
    padding: 50px 0;
}

figure.bill-photo img {
    width: 300px;
    margin: 25px 0;
    border-radius: 50%;
}

figure.twitter-logo img {
  width: 30px;
  height: 30px;
}

.article {
  padding: 80px 50px;
}

h2.article-title {
  font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  text-align: center;
}

.sponsor-text {
  margin-bottom: 30px;
}

img.img-responsive.platinum-sponsor-logos {
  display: block;
  width: auto;
  max-width: 280px;
  height: auto;
  margin: 0 auto;  
}

img.img-responsive.gold-sponsor-logos {
  display: block;
  width: auto;
  max-width: 250px;
  height: auto;
  margin: 10px auto;
}

img.img-responsive.silver-sponsor-logos {
  display: block;
  width: auto;
  max-width: 180px;
  height: auto;
  margin: 10px auto;
}

img.img-responsive.venue-sponsor-logos {
  display: block;
  width: auto;
  max-width: 200px;
  height: auto;
  margin: 0 auto;
}

.img-svg {
  width: 180px;
}

.sponsor-row {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  justify-content: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
    align-items: center;        
  margin-top: 2em;
}

.sponsor-row div:not(:last-child) {
  margin-right: 1.2em;
}

.sponsor-invite-text {
  margin-top: 2.5em;
}

#partners {
  background: #EDEDED;
}

.speaker-mul {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  -ms-flex-align: center;
  -webkit-box-align: center;
  align-items: center;
}

.speaker-mul:last-child::before {
  content: "and";
  padding: 0 1.5em;
}

.speaker {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  -ms-flex-align: center;
  -webkit-box-align: center;
  align-items: center;
  padding-top: 55px;
  margin-bottom: 20px;
}

.speaker-img {
  width: 170px;
  height: 170px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 auto;
}

.speaker-img-xs {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 1.5em 0 0;
}

img.speaker-img-responsive {
  display: block;
  width: 100%;
  height: auto;
}

.timeline .speaker-img {
  margin: 0 1.5em 0 0;
}

.speaker-name a {
  font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
  font-weight: 700;
  font-size: 1.5em;
  color: #1da79d;
  padding-bottom: 0.5em;
}

.speaker-caption {
  color: #7e7e7e;
  font-size: 1.2em;
  padding-bottom: 0.5em;
}

.speaker-bio {
  padding-bottom: 0.5em;
  font-size: 16px;
}

.speaker-talk-link a {
  text-decoration: none;
  font-size: 1.4em;
  color: #2a70c6;
}

.speaker-bio-link a {
  text-decoration: underline;
  color: #2a70c6;
  font-size: 1em;
}

.keynote-tag {
  font-size: 1.1em;
  color: #a69225;
}

.single {
  position: relative;
  display: block;
  min-height: 100%;
}

.schedule-date-block {
  padding-top: 0.5em;
  margin: 0 auto 2em auto;
  text-align: center;
}

.schedule-date-block hr {
  max-width: 120px;
  border-width: 2px;
  margin: 0.5em auto;
  border-color: #2a70c6;
}

.schedule-day {
  font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
}

.schedule-event {
  font-weight: 500;
  font-size: 18px;
}

.schedule-notes {
  margin-top: 1.3em;
  font-style: italic;
}

h2.timeline-header {
  font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 600;
  font-size: 2em;
  margin: 0 0 1em 0;
}

h4.timeline-sub-header {
  font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 600;
  margin: 0 0 1em 0;
}

h4.timeline-mono-header {
  font-family: 'Source Code Pro', 'Inconsolata', 'Courier', monospace;
  font-weight: 600;
  margin: 0 0 1em 0;
}

.timeline {
  position: relative;
}

.timeline:before {
  content: '';
  position: absolute;
  top: 0;
  left: 20%;
  background: #272727;
  width: 1px;
  height: 100%;
}

.timeline-point {
  position: absolute;
  width: 15px;
  height: 15px;
  background-color: #272727;
  border-radius: 50%;
  left: 20%;
  margin-top: 2px;
  margin-left: -7.5px;
}

@media(min-width: 992px) {
  .timeline:before {
    left: 10%;
  }
  .timeline-point {
    left: 10%;
  }
}

.timeline-block {
  padding: 1em 0;
}

.timeline-block[id]:not([id=""]) {
  padding-top: 5em;
  margin-top: -4em;
}

.timeline-time, .timeline-event {
  padding: 0;
}

.timeline-time {
  font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
  color: #36bfbe;
  padding-right: 5em;
}

h4.timeline-sub-block-header {
  font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 600;
  font-size: 1.3em;
  margin: 2em 0 0.8em 0;
}

.talk-block p.text-muted {
  padding-bottom: 1em;
  margin: 0;
}
/* ... */

